# content-intelligence

./: .env.prod.example  .gitignore  CLAUDE.md  Caddyfile  README.md  docker-compose.prod.yml  docker-compose.yml  index.html
.github/workflows/: demo.yml  deploy.yml
assets/: browser-CfRovc47.js  index-CW8CrxKu.css  index-D_IyPP1D.js
backend/: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  alembic.ini  conftest.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1104b4ad5d15_backfill_trends_scrape_status.py  516341f83e32_add_cluster_run_stage_fix_calculated_at.py  5c201ef892c5_add_pipeline_group_lock.py  6920af718875_redesign_cluster_insight_raw_signals.py  6e62c85f88ee_pr3_demand_performance_quadrant.py  81927e488955_add_gsc_tables.py  a7b3c5e8d910_add_structured_insight_columns.py  b0c7e295504b_add_article_analysis_columns_and_summary_array.py  b9e902e95bd6_add_cluster_insight_desk_category_user_.py  ba20901f2d9c_baseline_schema.py  c3f1a8b29e70_add_parent_cluster_id_to_article_cluster.py  c9d5e7f1a2b3_add_rss_trends_gsc_signals.py  d5057fd81f8b_add_full_text_scraping.py  e1f3a5c7b9d2_cluster_insight_cascade.py  e7b8b8e7783a_add_cluster_user_need_distribution.py  e8f3a2b91c4d_add_category_to_trend_signal.py  f3e2d1c0b9a8_move_claims_to_article.py
backend/scripts/: benchmark_single_call_insight.py  gsc_verify.py  seed_labeling_smoke.py  validate_embeddings.py
docs/: README.md  api_contract.md  architecture.md  constraints.md  conventions.md  decisions.md  docker-sop.md  frontend.md  hardening-sop.md  llm-models.md  logging-sop.md  operations-sop.md  prd.md  review-sop.md  schema.dbml  tech-stack.md  timeline_mvp.md
docs/plan/: README.md  pr1-window-alignment-trend-metric-fix.md  pr2-gsc-article-link.md  pr3-scoring-split-demand-performance.md  pr4-api-contract-d35.md  pr5-frontend-opportunity-card.md
docs/superpowers/plans/: 2026-06-17-demo-github-pages.md  2026-06-18-embed-editorial-analyst-backend.md  2026-06-22-ai-analyst.md  2026-06-23-cluster-bento-card.md  2026-06-23-news-volume-trend.md  2026-06-24-labeling-api-provider.md  2026-06-24-llm-provider-abstraction.md  2026-06-24-llm-shared-package.md  2026-06-25-embedding-api-provider.md  2026-06-26-full-api-reversible-local.md  2026-06-29-morning-tempo-relevance-filter.md  2026-06-30-cluster-user-need-distribution.md
docs/superpowers/specs/: 2026-06-17-demo-github-pages-design.md  2026-06-18-embed-editorial-analyst-design.md  2026-06-22-ai-analyst-frontend-design.md  (+9 more)
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  article_clustering_force_graph.html  eslint.config.js  package.json  tsconfig.base.json  tsconfig.json
template-fe/: Content Intelligence.html  app.jsx  components.jsx  data.jsx  page-bucket.jsx  page-buckets.jsx  page-dashboard.jsx  page-desk.jsx  page-keywords.jsx  page-performance.jsx  page-queue.jsx  styles.css
template-fe/scraps/: sketch-2026-04-25T12-05-16-4po3ec.napkin
