[project]
name = "editor-intelligence"
version = "0.1.0"
description = "Editorial intelligence dashboard — clustering trending topics for Tempo's editorial team"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/*"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
core = { workspace = true }
ingest = { workspace = true }
embedding = { workspace = true }
clustering = { workspace = true }
labeling = { workspace = true }
scoring = { workspace = true }
api = { workspace = true }
pipeline = { workspace = true }
analyst = { workspace = true }
llm = { workspace = true }
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "ruff>=0.7",
  "mypy>=1.13",
  "alembic>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["packages/api/src/api", "packages/ingest/src/ingest"]
omit = ["**/cli.py", "**/seed.py", "**/pipeline.py", "**/sitemap.py", "**/trends.py"]
branch = true
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]
fail_under = 90

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
